tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_trait_alias_with_where_clause_has_equivalent_errors_2/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: No method named 'baz' found for type 'T'
   ┌─ src/main.nr:13:13
   │
13 │             x.baz()
   │             -------
   │

Aborting due to 1 previous error
