tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_trait_alias_with_where_clause_has_equivalent_errors_2/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: No method named 'baz' found for type 'T'
   ┌─ src/main.nr:13:13
   │
13 │             x.baz()
   │             -------
   │

Aborting due to 1 previous error
